add method send code to email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
-
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=abdulmajit.kubatbekov@gmail.com
+spring.mail.password=manas.edu.java
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
